An ugly implemntation of the disc flipping algorithm.

--- a/README
+++ b/README
@@ -4,3 +4,6 @@ node server/server.js
 How to run tests:
 in /client/
 steal/js funcunit/run phantomjs http://localhost:8080/app/funcunit.html
+
+How to test manually:
+http://localhost:8080/app/index.html
